[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://BGgd.gd" type="Script" id=4]
[ext_resource path="res://Obstacles.tscn" type="PackedScene" id=5]
[ext_resource path="res://dodge_assets/art/Background.png" type="Texture" id=6]
[ext_resource path="res://Score.gd" type="Script" id=7]
[ext_resource path="res://dodge_assets/fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 480, 760, 0, 0, 0, 0, 0, 760, 0, 0, 0, 0, 0, 720 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 480, 760, 0, 0, 0, 0, 0, 760, 0, 0, 0, 0, 0, 720 )
}

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
extra_spacing_space = 1
font_data = ExtResource( 8 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Obstacle = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 100 )

[node name="MobTimer" type="Timer" parent="."]

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.757

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 600 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0, 720 )

[node name="ObstaclePath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2( 0, 720 )

[node name="BG Layer" type="Node2D" parent="."]

[node name="BG Sprite" type="Sprite" parent="BG Layer"]
position = Vector2( 248, 897.16 )
z_index = -2
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( -0.948044, -2.85974, 501.874, 1802.37 )
script = ExtResource( 4 )

[node name="UI Layer" type="Control" parent="."]
margin_left = 220.472
margin_top = 620.574
margin_right = 260.472
margin_bottom = 641.574
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI Layer"]
margin_left = -11.6404
margin_top = 1.70911
margin_right = 52.3596
margin_bottom = 60.7091
custom_fonts/font = SubResource( 3 )
text = "000"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="EndGame" from="Player" to="." method="_on_Player_EndGame"]
[connection signal="score" from="Player" to="UI Layer/Score" method="_on_Player_score"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
